--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "keywords": ["react", "sketch", "drawing", "canvas"],
+  "keywords": [
+    "react",
+    "sketch",
+    "drawing",
+    "canvas"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -33,5 +38,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^6.7.0",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^30.0.0"
   }
 }
