--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,11 +1,11 @@
 {
-  "short_name": "Sketch",
-  "name": "Online Sketch Board",
+  "short_name": "Grafogram",
+  "name": "Grafogram - Online Sketch Board",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "grafogram_favicon.png",
       "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "type": "image/png"
     }
   ],
   "start_url": ".",
